--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 	<div class="container">
 
 
-		<img id="img_1"src="file:///C:/Users/victo/Desktop/ProgettoAlessia/logo.png" alt="logo" >
+		<img id="img_1"src="logo.png" alt="logo" >
 		<a href="#prenotazione">
 			<button>PRENOTA ORA</button>
 		</a>
