--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 			color: rgb(255, 255, 255);
 		}
 		#img_1{
+			border-radius: 50%;
 			width:50%;
 			margin-top: 10px;
 			margin-bottom:10px;
@@ -194,7 +195,7 @@
     <div class=" bb">          
 		<div class="big-icon"><picture><img src="https://cf.bstatic.com/xdata/images/hotel/max1024x768/371661126.jpg?k=976e94157cbd93c3c38a5ae1cf555eac978c656c47838eb883ff4e4311f891ee&o=&hp=1" width="300" height="300" alt="" loading="lazy"></picture></div>            
         	<h3 class="tt">Quest'anno niente mare?</h3>
-        	<div class="tt">I villaggi rainbow offrono ai propri ospiti anche l'opportunità di immergersi nella natura in località di montagna davvero incantevoli. Alcuni esempi? Germania, Scozia, Francia.
+        	<div class="tt">I villaggi Rainbow offrono ai propri ospiti anche l'opportunità di immergersi nella natura in località di montagna davvero incantevoli. Alcuni esempi? Germania, Scozia, Francia.
 				Per i villaggi presenti nell'entroterra si potranno organizzare escursioni nelle città vicine e visite nei castelli delle principesse più famose come Cenerentola e Bella della Bella e la Bestia. Inoltre offriamo spa e piscine riscaldate per gli adulti che vogliono concedersi un po' di coccole e relax.</div>
 				
 			</div>
