--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
 			<div class="icon">
 				<div>
 					<span uk-icon="icon: home; width: 80;"><svg width="80" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><polygon points="18.65 11.35 10 2.71 1.35 11.35 0.65 10.65 10 1.29 19.35 10.65"></polygon><polygon points="15 4 18 4 18 7 17 7 17 5 15 5"></polygon><polygon points="3 11 4 11 4 18 7 18 7 12 12 12 12 18 16 18 16 11 17 11 17 19 11 19 11 13 8 13 8 19 3 19"></polygon></svg></span>        
-					<h2 style="font-weight: 700" class="bellino">1.000.000</h2>
-					<h3 class="bellino">		Hotels in tutto il mondo		</h3>        
-					<div class="bellino">		Dai 5 stelle agli appartamenti		</div>        
+					<h2 style="font-weight: 700" class="bellino">1.000</h2>
+					<h3 class="bellino">		Resorts in tutto il mondo		</h3>        
+					<div class="bellino">		Dai 5 stelle agli hotel		</div>        
 				</div>
 			</div>
 			<div class="icon">
