--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		}
 		.bellino{
 			color: azure;
-			padding: auto;
+			padding: 5px;
 		}
 	</style>
 	
@@ -126,7 +126,7 @@
 			<div class="icon">
 				<div>
 					<span uk-icon="icon: home; width: 80;"><svg width="80" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><polygon points="18.65 11.35 10 2.71 1.35 11.35 0.65 10.65 10 1.29 19.35 10.65"></polygon><polygon points="15 4 18 4 18 7 17 7 17 5 15 5"></polygon><polygon points="3 11 4 11 4 18 7 18 7 12 12 12 12 18 16 18 16 11 17 11 17 19 11 19 11 13 8 13 8 19 3 19"></polygon></svg></span>        
-					<h2 style="font-weight: 700" class="bellino">1.000</h2>
+					<h2 style="font-weight: 700" class="bellino">3.000</h2>
 					<h3 class="bellino">		Resorts in tutto il mondo		</h3>        
 					<div class="bellino">		Dai 5 stelle agli hotel		</div>        
 				</div>
@@ -134,7 +134,7 @@
 			<div class="icon">
 				<div>
 					<span class="el-image uk-icon" uk-icon="icon: world; width: 80;"><svg width="80" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill="none" stroke="#000" d="M1,10.5 L19,10.5"></path><path fill="none" stroke="#000" d="M2.35,15.5 L17.65,15.5"></path><path fill="none" stroke="#000" d="M2.35,5.5 L17.523,5.5"></path><path fill="none" stroke="#000" d="M10,19.46 L9.98,19.46 C7.31,17.33 5.61,14.141 5.61,10.58 C5.61,7.02 7.33,3.83 10,1.7 C10.01,1.7 9.99,1.7 10,1.7 L10,1.7 C12.67,3.83 14.4,7.02 14.4,10.58 C14.4,14.141 12.67,17.33 10,19.46 L10,19.46 L10,19.46 L10,19.46 Z"></path><circle fill="none" stroke="#000" cx="10" cy="10.5" r="9"></circle></svg></span> 
-					<h2 style="font-weight: 700" class="bellino">33.000</h2>
+					<h2 style="font-weight: 700" class="bellino">1.000</h2>
 					<h3 class="bellino">		Località		</h3>
 					<div class="bellino">		Dalle capitali ai piccoli borghi		</div>        
 				</div>
@@ -142,7 +142,7 @@
 			<div class="icon">
 				<div>
 					<span uk-icon="icon: file-text; width: 80;"><svg width="80" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><rect fill="none" stroke="#000" width="13" height="17" x="3.5" y="1.5"></rect><line fill="none" stroke="#000" x1="6" x2="12" y1="12.5" y2="12.5"></line><line fill="none" stroke="#000" x1="6" x2="14" y1="8.5" y2="8.5"></line><line fill="none" stroke="#000" x1="6" x2="14" y1="6.5" y2="6.5"></line><line fill="none" stroke="#000" x1="6" x2="14" y1="10.5" y2="10.5"></line></svg></span>        
-					<h2 style="font-weight: 700" class="bellino">6.000</h2>
+					<h2 style="font-weight: 700" class="bellino">500</h2>
 					<h3 class="bellino">Contratti diretti</h3>
 					<div class="bellino">Collegati ad oltre 45 channel manager</div> 
 				</div>
@@ -150,7 +150,7 @@
 			<div class="icon">
 				<div>
 					<span uk-icon="icon: link; width: 80;"><svg width="80" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill="none" stroke="#000" stroke-width="1.1" d="M10.625,12.375 L7.525,15.475 C6.825,16.175 5.925,16.175 5.225,15.475 L4.525,14.775 C3.825,14.074 3.825,13.175 4.525,12.475 L7.625,9.375"></path><path fill="none" stroke="#000" stroke-width="1.1" d="M9.325,7.375 L12.425,4.275 C13.125,3.575 14.025,3.575 14.724,4.275 L15.425,4.975 C16.125,5.675 16.125,6.575 15.425,7.275 L12.325,10.375"></path><path fill="none" stroke="#000" stroke-width="1.1" d="M7.925,11.875 L11.925,7.975"></path></svg></span>        
-					<h2 style="font-weight: 700" class="bellino">36</h2>
+					<h2 style="font-weight: 700" class="bellino">25</h2>
 					<h3 class="bellino">Fornitori collegati</h3>     
 					<div class="bellino">In tempo reale e conferma automatica</div>        
 				</div>
@@ -166,7 +166,7 @@
 			<div class="icon">
 				<div>
 					<span class="el-image uk-icon" uk-icon="icon: heart; width: 80;"><svg width="80" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill="none" stroke="#000" stroke-width="1.03" d="M10,4 C10,4 8.1,2 5.74,2 C3.38,2 1,3.55 1,6.73 C1,8.84 2.67,10.44 2.67,10.44 L10,18 L17.33,10.44 C17.33,10.44 19,8.84 19,6.73 C19,3.55 16.62,2 14.26,2 C11.9,2 10,4 10,4 L10,4 Z"></path></svg></span>
-					<h2 style="font-weight: 700" class="bellino">25</h2>
+					<h2 style="font-weight: 700" class="bellino">10</h2>
 					<h3 class="bellino">Anni d'esperienza</h3>
 					<div class="bellino"><p>dal 1999 al tuo fianco</p></div>
 				</div>
