--- a/index.html
+++ b/index.html
@@ -90,12 +90,20 @@
 		.tt{
 			text-align: left;
 		}
+		.tc{
+			margin-left: 30%;
+		}
 		p{
 			color: azure;
 		}
 		.bellino{
 			color: azure;
-			padding: 5px;
+		}
+		h3{
+			padding: auto;
+		}
+		h2{
+			padding: auto;
 		}
 	</style>
 	
@@ -214,6 +222,14 @@
 	</div>
 </div>
 </div>
+	<div class="grid container">
+		<h3 class="tt tc bellino">Vi informiamo che prenotando direttamente con noi le escursioni potrete godere di uno sconto del 10% per gli adulti e i bambini fino a 7 anni usufruiranno del servizio gratuitamente.
+			Rainbow resorts si occuperà di organizzare il vostro viaggio con diverse formule, in base a come vorrete viaggiare:<br>
+			•	villaggio + parcheggio + traghetto<br>
+			•	villaggio + aereo + navetta aeroportuale<br>
+			•	villaggio + parcheggio<br>
+		</h3>
+	</div>
 
 </body>
 </html>
