--- a/index.html
+++ b/index.html
@@ -99,12 +99,6 @@
 		.bellino{
 			color: azure;
 		}
-		h3{
-			padding: auto;
-		}
-		h2{
-			padding: auto;
-		}
 	</style>
 	
 <head>
@@ -223,8 +217,9 @@
 </div>
 </div>
 	<div class="grid container">
-		<h3 class="tt tc bellino">Vi informiamo che prenotando direttamente con noi le escursioni potrete godere di uno sconto del 10% per gli adulti e i bambini fino a 7 anni usufruiranno del servizio gratuitamente.
-			Rainbow resorts si occuperà di organizzare il vostro viaggio con diverse formule, in base a come vorrete viaggiare:<br>
+		<div class="tt tc bellino">Vi informiamo che prenotando direttamente con noi le escursioni potrete godere di uno sconto del 10% per gli adulti e i bambini fino a 7 anni usufruiranno del servizio gratuitamente.
+			Rainbow resorts si occuperà di organizzare il vostro viaggio con diverse formule, in base a come vorrete viaggiare:<br></div>
+		<h3 class="tt tc bellino">
 			•	villaggio + parcheggio + traghetto<br>
 			•	villaggio + aereo + navetta aeroportuale<br>
 			•	villaggio + parcheggio<br>
