--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
 		.tc{
 			margin-left: 30%;
 		}
+		.tc2{
+			margin-left: 10%;
+		}
 		p{
 			color: azure;
 		}
@@ -225,11 +228,11 @@
 	<div class="grid container">
 		<div class="tt tc bellino">Vi informiamo che prenotando direttamente con noi le escursioni potrete godere di uno sconto del 10% per gli adulti e i bambini fino a 7 anni usufruiranno del servizio gratuitamente.
 			Rainbow resorts si occuperà di organizzare il vostro viaggio con diverse formule, in base a come vorrete viaggiare:<br></div>
-		<h5 class="tt tc bellino">
+		<h4 class="tt tc2 bellino">
 			•	villaggio + parcheggio + traghetto<br>
 			•	villaggio + aereo + navetta aeroportuale<br>
 			•	villaggio + parcheggio<br>
-		</h5>
+		</h4>
 	</div>
 
 </body>
