--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		#img_1{
 			border-radius: 50%;
 			width:50%;
+			max-width: 300px;
 			margin-top: 10px;
 			margin-bottom:10px;
 			margin-left: 25%;
@@ -122,8 +123,8 @@
 	<div class="container">
 
 
-		<img id="img_1"src="logo.png" alt="logo" >
-		<a href="#prenotazione">
+		<img id="img_1"src="logogravit.png" alt="logo" >
+		<a href="#prenotazione" class="grid">
 			<button>PRENOTA ORA</button>
 		</a>
 		<h2 class="bellino">Chi siamo?</h2>
