--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 	<div class="container">
 
 
-		<img id="img_1"src="logogravit.png" alt="logo" >
+		<img id="img_1"src="logodef.png" alt="logo" >
 		<a href="#prenotazione" class="grid">
 			<button>PRENOTA ORA</button>
 		</a>
@@ -141,7 +141,7 @@
 			<div class="icon">
 				<div>
 					<span uk-icon="icon: home; width: 80;"><svg width="80" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><polygon points="18.65 11.35 10 2.71 1.35 11.35 0.65 10.65 10 1.29 19.35 10.65"></polygon><polygon points="15 4 18 4 18 7 17 7 17 5 15 5"></polygon><polygon points="3 11 4 11 4 18 7 18 7 12 12 12 12 18 16 18 16 11 17 11 17 19 11 19 11 13 8 13 8 19 3 19"></polygon></svg></span>        
-					<h2 style="font-weight: 700" class="bellino">3.000</h2>
+					<h2 style="font-weight: 700" class="bellino">50</h2>
 					<h3 class="bellino">		Resorts in tutto il mondo		</h3>        
 					<div class="bellino">		Dai 5 stelle agli hotel		</div>        
 				</div>
@@ -149,7 +149,7 @@
 			<div class="icon">
 				<div>
 					<span class="el-image uk-icon" uk-icon="icon: world; width: 80;"><svg width="80" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill="none" stroke="#000" d="M1,10.5 L19,10.5"></path><path fill="none" stroke="#000" d="M2.35,15.5 L17.65,15.5"></path><path fill="none" stroke="#000" d="M2.35,5.5 L17.523,5.5"></path><path fill="none" stroke="#000" d="M10,19.46 L9.98,19.46 C7.31,17.33 5.61,14.141 5.61,10.58 C5.61,7.02 7.33,3.83 10,1.7 C10.01,1.7 9.99,1.7 10,1.7 L10,1.7 C12.67,3.83 14.4,7.02 14.4,10.58 C14.4,14.141 12.67,17.33 10,19.46 L10,19.46 L10,19.46 L10,19.46 Z"></path><circle fill="none" stroke="#000" cx="10" cy="10.5" r="9"></circle></svg></span> 
-					<h2 style="font-weight: 700" class="bellino">1.000</h2>
+					<h2 style="font-weight: 700" class="bellino">50</h2>
 					<h3 class="bellino">		Località		</h3>
 					<div class="bellino">		Dalle capitali ai piccoli borghi		</div>        
 				</div>
@@ -157,7 +157,7 @@
 			<div class="icon">
 				<div>
 					<span uk-icon="icon: file-text; width: 80;"><svg width="80" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><rect fill="none" stroke="#000" width="13" height="17" x="3.5" y="1.5"></rect><line fill="none" stroke="#000" x1="6" x2="12" y1="12.5" y2="12.5"></line><line fill="none" stroke="#000" x1="6" x2="14" y1="8.5" y2="8.5"></line><line fill="none" stroke="#000" x1="6" x2="14" y1="6.5" y2="6.5"></line><line fill="none" stroke="#000" x1="6" x2="14" y1="10.5" y2="10.5"></line></svg></span>        
-					<h2 style="font-weight: 700" class="bellino">500</h2>
+					<h2 style="font-weight: 700" class="bellino">2.000</h2>
 					<h3 class="bellino">Contratti diretti</h3>
 					<div class="bellino">Collegati ad oltre 45 channel manager</div> 
 				</div>
