--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 	<div class="container">
 
 
-		<img id="img_1"src="logodef.png" alt="logo" >
+		<img id="img_1"src="logodefinitivo.png" alt="logo" >
 		<a href="#prenotazione" class="grid">
 			<button>PRENOTA ORA</button>
 		</a>
