--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Villaggi rainbow: sogni da prenotare</title>
+	<link rel="icon" href="logobar.png"> 
 </head>
 <body>
 	
